--- a/2. web-api/6. 이벤트객체/1. 이벤트객체 기초.html
+++ b/2. web-api/6. 이벤트객체/1. 이벤트객체 기초.html
@@ -14,7 +14,8 @@
     <script>
 
         document.onclick = function(e) {
-            console.log(e);
+            // const {x, y} = e;
+            // console.log(e);
             const $msg = document.querySelector('.msg');
             $msg.textContent = `x: ${e.x}, y: ${e.y}`;
         };
