--- a/2. web-api/5. 이벤트기초/2. 프로퍼티방식.html
+++ b/2. web-api/5. 이벤트기초/2. 프로퍼티방식.html
@@ -20,7 +20,7 @@
 
         const [$b1, $b2, $b3] = [...document.querySelectorAll('button')];
 
-        $b1.onclick = sayHello;
+        $b1.onclick = sayHello; //위임
         $b2.onclick = function() {
             $b2.style.width= '150px';
         };
@@ -30,10 +30,10 @@
         $b3.onmouseleave = () => {
             $b3.style.background = 'yellow';
         };
-        $b3.onmouseleave = sayHello;
+        // $b3.onmouseleave = sayHello;
 
         //이벤트핸들러 제거
-        $b3.onmouseenter = null;
+        // $b3.onmouseenter = null;
 
     </script>
 
