--- a/2. web-api/6. 이벤트객체/2. 키보드이벤트.html
+++ b/2. web-api/6. 이벤트객체/2. 키보드이벤트.html
@@ -17,6 +17,9 @@
         const $msg = document.querySelector('.msg');
 
         $input.addEventListener('keyup', function(e) {
+
+            console.log(e);
+
             if (e.key === 'Enter') {
                 $msg.textContent = $input.value;
                 $input.value = '';
