--- a/2. web-api/6. 이벤트객체/5. 이벤트위임1.html
+++ b/2. web-api/6. 이벤트객체/5. 이벤트위임1.html
@@ -66,12 +66,12 @@
         };
 
         //이벤트 핸들러 바인딩
-        // for (let $li of [...$fruits.children]) {
-        //     $li.onclick = activate;
-        // }
+        for (let $li of [...$fruits.children]) {
+            $li.onclick = activate;
+        }
 
         //ul에 이벤트부여 후 버블링 사용
-        $fruits.onclick = activate;
+        // $fruits.onclick = activate;
 
     </script>
 
